<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.androditry.NewQuestion" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvAskQuestion"
            android:gravity="center_horizontal"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:textSize="30sp"
            android:shadowRadius="5"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="5"
            android:textStyle="bold"
            android:textColor="#111111"
            android:text="@string/askQuestion" />
        
    <TextView
        android:id="@+id/tvTitleQuestionAsk"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="5"
        android:textStyle="bold"
        android:textColor="#111111"
        android:text="@string/quesTitle" />
    
    <EditText
        android:id="@+id/etQuesTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/quesTitleHint" />
    
    <TextView
        android:id="@+id/tvDetailsQuestionAsk"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="5"
        android:textStyle="bold"
        android:textColor="#111111"
        android:text="@string/quesDetails" />

    <EditText
        android:id="@+id/etQuesDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18sp"
        android:minHeight="80dp"
        android:hint="@string/quesDetailsHint"
        android:inputType="textMultiLine" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <Button
        android:id="@+id/btnPostQuestion"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:textSize="30sp"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="5"
        android:background="@drawable/btn_border"
        android:textAllCaps="false"
        android:text="@string/postQuestion" />
    </LinearLayout>
    
</LinearLayout>

</ScrollView>