<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.androditry.LoginIPM" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
   		android:orientation="vertical" >
    
    <TextView
        android:id="@+id/tvUNameSchool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_username" 
        android:textSize="20sp"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="5"
        android:textStyle="bold"
        android:textColor="#111111"/>

        
    <EditText
            android:id="@+id/etUsernameLoginSchool"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
      	    android:typeface="serif" />
    
    <TextView
        android:id="@+id/tvPassSchool"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_pass"
        android:textSize="20sp"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="5"
        android:textStyle="bold"
        android:textColor="#111111" />
    
    <EditText
        	android:id="@+id/etPassLoginSchool"
        	android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
       		android:textStyle="bold"
       		android:typeface="serif"
            android:layout_height="wrap_content" />
        
    <Button
        android:id="@+id/btnLoginSchool"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:textSize="30sp"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="5"
        android:background="@drawable/btn_border"
        android:textAllCaps="false"
        android:text="@string/login" />
    
    <TextView
        android:id="@+id/tvNewUserSchool"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:textSize="30sp"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="5"
        android:textStyle="bold"
        android:textColor="#111111"
        android:text="@string/noaccount"/>
    
    <Button
        android:id="@+id/btnStartSignupSchool"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:textSize="30sp"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="5"
        android:background="@drawable/btn_border"
        android:textAllCaps="false"
        android:text="@string/signup" />
        
    </LinearLayout>
</ScrollView>