<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.androditry.LoginIPM" >
    
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
    <TextView
        android:id="@+id/tvFullNameSignUpSchool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_fullname"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="5"
        android:textStyle="bold"
        android:textColor="#111111"
        android:typeface="serif"/>
        
    <EditText
            android:id="@+id/etFullnameSignUpSchool"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
      	    android:typeface="serif" />
    
    <TextView
        android:id="@+id/tvUsernameSignUpSchool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_username"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="5"
        android:textStyle="bold"
        android:textColor="#111111"
        android:typeface="serif"/>
        
    <EditText
            android:id="@+id/etUsernameSignUpSchool"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
      	    android:typeface="serif" />
    
    <TextView
        android:id="@+id/tvEmailSignUpSchool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="5"
        android:textStyle="bold"
        android:textColor="#111111"
        android:typeface="serif"/>
        
    <EditText
            android:id="@+id/etEmaleSignUpSchool"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
      	    android:typeface="serif" />

    <TextView
        android:id="@+id/tvPassSignUpSchool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_pass"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="5"
        android:textColor="#111111"
        android:textStyle="bold"
        android:typeface="serif" />
    
    <EditText
        	android:id="@+id/etPassSignUpSchool"
        	android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
       		android:textStyle="bold"
       		android:typeface="serif"
            android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tvConfPassSignUpSchool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reenter_pass"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="5"
        android:textStyle="bold"
        android:textColor="#111111"
        android:typeface="serif" />
    
    <EditText
        	android:id="@+id/etRePassSignUpSchool"
        	android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
       		android:textStyle="bold"
       		android:typeface="serif"
            android:layout_height="wrap_content" />
        
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <CheckBox
      android:id="@+id/cbTermsSchool"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical" />
    
 	<TextView
        android:id="@+id/tvTermsSchool"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="5"
        android:textStyle="bold"
        android:textColor="#111111"
        android:text="@string/termsNConditions" />
 	
 	</LinearLayout>
 	
    <Button
        android:id="@+id/btnSignupSchool"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="5"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_border"
        android:textAllCaps="false"
        android:text="@string/signup" />
        
    </LinearLayout>

</ScrollView>
