<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
        
        <TextView
        android:id="@+id/tvSchoolSelect"
        android:text="@string/school_select"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="serif" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
        
        <Button
            android:layout_gravity="center_horizontal"
        	android:id="@+id/btnSchool"
        	android:layout_width="150dp"
        	android:layout_height="wrap_content"
        	android:background="@drawable/blue_button"
            style="@style/ButtonText"
        	android:text="@string/school" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
        
        <Button
        	android:id="@+id/btnIPM"
        	android:layout_width="150dp"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center_horizontal"
        	android:background="@drawable/blue_button"
            style="@style/ButtonText"
        	android:text="@string/IPM" />
        
    </LinearLayout>

</LinearLayout>